router routes,tailwind color variant,responsive navbar created with awesome animation

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,26 @@
 /* by default font family Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* Color Palettes */
+
+@layer base {
+    :root{
+        --body--BG: #F4F8F9;
+        --common: #FFB200;
+        --black: #181818;
+    }
+}
+
+.dark-theme{
+  --body--BG: #010101 ;
+}
+
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #F5F5F5;
+  background: var(--body--BG);
 }
 
 code {
