simple post data card and added on the post page

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     :root{
         --body--BG: #F4F8F9;
         --common: #FFB200;
+        --primaryRed: #C1101F;
         --commonDeep: #c48e12;
         --black: #181818;
     }
