store user info and properly authnetication functionality added

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
         --primaryRed: #C1101F;
         --commonDeep: #c48e12;
         --black: #181818;
+        --lightgray: #64748B;
     }
 }
 
