some card color fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
     :root{
         --body--BG: #F4F8F9;
         --white--card: #F9F9F9;
-        --common: #FFB200;
+        --common: #7743DB;
         --primaryRed: #C1101F;
-        --commonDeep: #c48e12;
+        --commonDeep: #6625df;
         --black: #181818;
         --lightgray: #64748B;
     }
