fixed giigle login

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     :root{
         --body--BG: #F4F8F9;
         --white--card: #F9F9F9;
-        --common: #7743DB;
+        --common: #6E29E7;
         --primaryRed: #C1101F;
         --commonDeep: #6625df;
         --black: #181818;
