fixed major bugs and highly protected account what fixed? bookong data postb error,get all post data api etc

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 @layer base {
     :root{
-        --body--BG: #fff8fc;
+        --body--BG: #fffafa;
         --white--card: #F9F9F9;
         --common: #6E29E7;
         --primaryRed: #C1101F;
