--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 @layer base {
     :root{
         --body--BG: #f6f8fc;
-        --white--card: #F9F9F9;
+        --white--card: #fbfbff;
         --common: #6E29E7;
         --primaryRed: #C1101F;
         --commonDeep: #6625df;
